--- a/fclient/app/src/main/res/layout/activity_pinpad.xml
+++ b/fclient/app/src/main/res/layout/activity_pinpad.xml
@@ -9,12 +9,24 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView android:id="@+id/txtAmount"
+            android:textSize="20dp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Введите ПИН-код"
             android:textAlignment="center"
             android:textSize="20dp" />
+
+        <TextView android:id="@+id/txtPtc"
+            android:textSize="16dp"
+            android:textAlignment="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/txtPin"
@@ -23,6 +35,10 @@
             android:text=""
             android:textAlignment="center"
             android:textSize="28dp" />
+
+
+
+
 
         <GridLayout android:layout_width="wrap_content"
             android:layout_height="wrap_content"
